Added "System" keyword detection for java

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -15,7 +15,7 @@
 
         <codeInsight.inlayProvider
                 implementationClass="io.github.andrelmv.plugin.inlay.InlayStringInterpolationProvider"
-                language="kotlin"/>
+                language="JAVA"/>
     </extensions>
 
     <extensions defaultExtensionNs="org.jetbrains.kotlin">
